# me-chatbot

./: .env.example  .gitignore  app.py  asgi.py  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: deploy.yml
app/: __init__.py  chatbot.py  config.py  email.py  main.py  models.py  routes.py  security.py  tools.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
